# habit_tracker_bot

./: .coverage  .env_example  .gitignore  Dockerfile  README.md  database.json  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_frequency.py  0003_rename_public_habit_is_public.py  0004_alter_habit_execution_time_alter_habit_frequency.py  0005_alter_habit_user.py  0006_alter_habit_frequency.py  0007_habit_date_start.py  0008_alter_habit_date_start.py  0009_alter_habit_date_start.py  0010_alter_habit_date_start.py  0011_alter_habit_date_start.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: test_data.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_user_tg_chat_id_alter_user_last_name.py
