[tool.poetry]
name = "habit-trecker-bot-test"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <74331153+SpriteSpirit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
